figs = \
	figures/cdplayer_trackeditor_button.png \
	figures/cdplayer_trackeditor_window.png \
	figures/cdplayer_window.png \
	figures/eject_button.png \
	figures/forward_button.png \
	figures/next_button.png \
	figures/pause_button.png \
	figures/play_button.png \
	figures/preferences_button.png \
	figures/previous_button.png \
	figures/rewind_button.png \
	figures/stop_button.png
docname = gnome-cd
lang = C
omffile = gnome-cd-C.omf
entities = legal.xml
include $(top_srcdir)/xmldocs.make
dist-hook: app-dist-hook

