pixmapdir = $(datadir)/pixmaps/gnome-cd/themes/None

BITMAPS = 			\
	    top-left.png	\
	    top-right.png	\
	    bottom-left.png	\
	    bottom-right.png	\
	    middle-left.png	\
	    middle-right.png	\
	    top.png		\
	    bottom.png		\
	    middle.png
	    
pixmap_DATA = $(BITMAPS) None.theme

EXTRA_DIST = $(BITMAPS) None.theme
