pixmapdir = $(datadir)/pixmaps/gnome-cd/themes/red-lcd-theme

BITMAPS = 		\
	    top-left.png	\
	    top-right.png	\
	    bottom-left.png	\
	    bottom-right.png	\
	    middle-left.png	\
	    middle-right.png	\
	    top.png		\
	    bottom.png		\
	    middle.png
	    
pixmap_DATA = $(BITMAPS) red-lcd.theme

EXTRA_DIST = $(BITMAPS) red-lcd.theme
